feat: HTML: accept fade-in attribute in page and landing layouts (zh docs need translate)

--- a/docs/_docs/en/2.3-layouts.md
+++ b/docs/_docs/en/2.3-layouts.md
@@ -61,18 +61,20 @@ Base on Base Layout.
 
 ### header
 
-| Variable          | Option Values         | Description |
-| ---               | ---                   | ---         |
-| **theme**         | light, dark           | |
-| **background**    | `!!str`               | Available when specified theme. |
+| Variable          | Option Values                   | Description |
+| ---               | ---                             | ---         |
+| **theme**         | light, dark                     | |
+| **background**    | `!!str`                         | Available when specified theme. |
+| **fade-in**       | false (default), true, up, down | If and how the header should fade in when viewed |
 
 ### article_header
 
-| Variable          | Option Values         | Description |
-| ---               | ---                   | ---         |
-| **type**          | overlay, cover        | |
-| **align**         | left (default), center| |
-| **theme**         | light (default), dark | |
+| Variable          | Option Values                   | Description |
+| ---               | ---                             | ---         |
+| **type**          | overlay, cover                  | |
+| **align**         | left (default), center          | |
+| **theme**         | light (default), dark           | |
+| **fade-in**       | false (default), true, up, down | If and how the header should fade in when viewed |
 | **background_color** | `!!str`            | Available when type is `overlay`. If set to a dark color, you need set theme as 'dark'. |
 | **background_image** | `!!map`            | Available when type is `overlay`, set as `false` can overwrite `cover` to disable background image. |
 | **image**         | `!!map`               | Available when type is `cover`. |
