--- a/docs/_docs/zh/2.3-layouts.md
+++ b/docs/_docs/zh/2.3-layouts.md
@@ -62,9 +62,10 @@ graph TB;
 ### header
 
 | 配置项             | 可选值                 | 描述        |
-| ---               | ---                   | ---         |
-| **theme**         | light, dark           | 当 type 为 `translucent` 时有效。 |
-| **background**    | `!!str`               | 当指定了 theme 值时有效。 |
+| ---               | ---                             | ---         |
+| **theme**         | light, dark                     | 当 type 为 `translucent` 时有效。 |
+| **background**    | `!!str`                         | 当指定了 theme 值时有效。 |
+| **fade-in**       | false (default), true, up, down | If and how the header should fade in when viewed |
 
 ### article_header
 
@@ -72,11 +73,12 @@ graph TB;
 | ---               | ---                   | ---         |
 | **type**          | overlay, cover        | |
 | **align**         | left (default), center | |
-| **theme**         | light (default), dark | |
-| **background_color** | `!!str`            | 当 type 为 `overlay` 时有效。当设置的背景色较深时，你需要设置 `theme` 为 dark。 |
-| **background_image** | `!!map`            | 当 type 为 `overlay` 时有效，设置为 `false` 可覆盖 `cover` 禁止背景图片。 |
-| **image**         | `!!map`               | 当 type 为 `cover` 时有效。 |
-| **actions**       | `!!seq`               | |
+| **theme**         | light (default), dark           | |
+| **fade-in**       | false (default), true, up, down | If and how the header should fade in when viewed |
+| **background_color** | `!!str`                      | 当 type 为 `overlay` 时有效。当设置的背景色较深时，你需要设置 `theme` 为 dark。 |
+| **background_image** | `!!map`                      | 当 type 为 `overlay` 时有效，设置为 `false` 可覆盖 `cover` 禁止背景图片。 |
+| **image**         | `!!map`                         | 当 type 为 `cover` 时有效。 |
+| **actions**       | `!!seq`                         | |
 
 ### article_header.background_image
 
