feat: comment-providers: Add hashover (zh docs need translate)

--- a/docs/_docs/zh/2.1-configuration.md
+++ b/docs/_docs/zh/2.1-configuration.md
@@ -272,6 +272,7 @@ comments:
 | **disqus** | [Disqus](https://disqus.com/) | |
 | **gitalk** | [Gitalk](https://github.com/gitalk/gitalk/) | |
 | **valine** | [Valine](https://valine.js.org/en/) | 2.2.4 |
+| **hashover** | [Hashover](http://tildehash.com/?page=hashover) | |
 | **custom** | | |
 
 ### Disqus
@@ -314,6 +315,17 @@ comments:
   valine:
     app_id  : "your-leanCloud-app-id"
     app_key : "your-leanCloud-app-key"
+```
+
+### Hashover
+
+To use Hashover you need a server with hashover installed on it
+
+```yaml
+comments:
+  provider: hashover
+  hashover:
+    src: # URL to hashover.php file
 ```
 
 对于上面所有的评论系统, 你都需要在页面的头信息里设置 `key` 属性来开启该页的评论，详情请戳 [这里](https://tianqi.name/jekyll-TeXt-theme/docs/zh/layouts#page-%E5%B8%83%E5%B1%80)。
