--- a/docs/_docs/en/2.1-configuration.md
+++ b/docs/_docs/en/2.1-configuration.md
@@ -274,6 +274,7 @@ You NEED set `sharing` variable as `true` in the page’s YAML Front Matter to e
 | **disqus** | [Disqus](https://disqus.com/) | |
 | **gitalk** | [Gitalk](https://github.com/gitalk/gitalk/) | |
 | **valine** | [Valine](https://valine.js.org/en/) | 2.2.4 |
+| **hashover** | [Hashover](http://tildehash.com/?page=hashover) | |
 | **custom** | | |
 
 ### Disqus
@@ -314,6 +315,17 @@ comments:
   valine:
     app_id  : "your-leanCloud-app-id"
     app_key : "your-leanCloud-app-key"
+```
+
+### Hashover
+
+To use Hashover you need a server with hashover installed on it
+
+```yaml
+comments:
+  provider: hashover
+  hashover:
+    src: # URL to hashover.php file
 ```
 
 For all the above comments systems, you NEED set `key` variable in the page’s YAML Front Matter to enable comments on this page, you can find more information [HERE](https://tianqi.name/jekyll-TeXt-theme/docs/en/layouts#page-layout).
