feat: HTML : Add contact-form and fncontact includes

--- a/docs/_docs/en/1.2-structure.md
+++ b/docs/_docs/en/1.2-structure.md
@@ -13,6 +13,7 @@ key: docs-structure
 │   ├── analytics-providers
 │   ├── aside
 │   ├── comments-providers
+│   ├── contact-form-providers
 │   ├── markdown-enhancements
 │   ├── pageview-providers
 │   ├── scripts
